Merge latest from oracle/graal master branch
* Fix merge conflict in RawFileOperationSupport